[package]
name = "screensharing-capturescreen-udpboaarrdcast"
version = "0.1.0"
description = "SmartLab ScreenShare - Screen sharing app for teaching with UDP Multicast"
authors = ["ZenaDev"]
edition = "2021"

[lib]
name = "screensharing_capturescreen_udpboaarrdcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = "0.25"
base64 = "0.22"
scrap = "0.5"
socket2 = "0.5"

# Windows-specific dependencies for DXGI capture
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
